--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -5,9 +5,15 @@
 <h1>Topics一覧</h1>
 <%= link_to "トピックを作成する", new_topic_path, class: 'btn btn-default' %>
 <% @topics.each do |topic| %>
-<h3><%= topic.user_id %></h3>
 <div class="row">
+<h3><%= topic.user_id %></h3>
+
+  <%= link_to topic_path(topic) do %>
  <p>トピック:<%= topic.content %></p>
+ <% end %>
  <%= link_to "編集", edit_topic_path(topic.id), class: 'btn btn-default btn-sm btn-success' %>
  <%= link_to "削除", topic_path(topic.id), method: :delete, data: {confirm:"本当に削除しますか？"}, class: 'btn btn-default btn-sm btn btn-danger' %>
+</div>
 <% end %>
+</div>
+</div>
