AWSのS3を設定した。シードデータも作成した

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -13,7 +13,7 @@
     <div id="comments_area">
       <%= render partial: 'comments/index', locals: { comments: @comments, topic: @topic } %>
     </div>
-    <%= render partial: 'comments/form', locals: { comment: @comment, blog: @topic } %>
+    <%= render partial: 'comments/form', locals: { comment: @comment, topic: @topic } %>
     <% if current_user.id == @topic.user_id %>
       <%= link_to '編集', edit_topic_path(@topic) %> |
     <% end %>
