--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
-<body>
+
+  <p class="flash"><%= notice %><%= alert %></p>
+  <body>
   <section class="main-header">
-    <p class="flash"><%= notice %><%= alert %></p>
+    <img src="images-master/achieve.png">
 </section>
+<h1>さあ、エンジニアになろう</h1>
 </body>
 </html>
