トップページにnyの画像を追加

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -77,6 +77,6 @@ body {
   padding-bottom: 15%;
   width: 100%;
   background-size: cover;
-  background-image: image-url("header.jpeg");
+  background-image: image-url("ny.jpeg");
   background-attachment: fixed;
 }
