--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,8 @@
-<h2>Change your password</h2>
+<div class="container">
+  <div class="wrapper col-md-4 col-md-offset-4 col-sm-10">
+<h2>パスワードを変更する</h2>
+
+<%= alert %>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -23,3 +27,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+  </div>
+</div>
