--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,6 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+  <div class="wrapper col-md-4 col-md-offset-4 col-sm-10">
+<h2>パスワード再設定</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -14,3 +16,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+  </div>
+</div>
