--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,9 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="wrapper col-md-4 col-md-offset-4 col-sm-10">
+
+<h2>サインアップ</h2>
+
+<%= alert %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -31,3 +36,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+  </div>
+</div>
