--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+  <div class="wrapper col-md-4 col-md-offset-4 col-sm-10">
 <% if @over_ten %>
   <%= link_to '以前のメッセージ', '?m=all' %>
 <% end %>
@@ -28,6 +30,8 @@
   <%= f.text_field :user_id, value: current_user.id, type: "hidden"  %>
 <div>
   <%= f.submit "メッセージを送る" %>
+</div>
+</div>
 </div>
 
 <% end %>
