--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,54 +1,18 @@
 <div class="container">
   <div class="wrapper col-md-4 col-md-offset-4 col-sm-10">
+
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true,class: "form-control",placeholder:"メールアドレス" %>
   </div>
+
 
   <div class="field">
-    <%= f.label :名前 %><br />
-    <%= f.text_field :name, class: "form-control" %>
-  </div>
-
-  <% if @user.provider.blank? %>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-  <% end %>
-
-
-<div class="field">
-    <%= f.label :現在のパスワード %><br />
-    <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
+    <%= f.text_field :name, class: "form-control",placeholder: "名前" %>
   </div>
 
   <div class="field">
@@ -57,14 +21,45 @@
     <%= f.hidden_field :avatar_cache %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "更新", class: "btn btn-primary btn-block" %>
+  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+  <% end %>
+
+  <div class="field">
+     <i>(変更しない場合は空欄にする)</i><br />
+    <%= f.password_field :password, autocomplete: "off", class: "form-control",placeholder: "パスワード" %>
+    <% if @minimum_password_length %>
+      <br />
+      <em><%= @minimum_password_length %> 文字以下にする</em>
+    <% end %>
   </div>
-  <h3>アカウントを削除する</h3>
 
-  <p>削除はこちらから <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+  <div class="field">
+    <%= f.password_field :password_confirmation, autocomplete: "off",class: "form-control",placeholder: "パスワード" %>
+  </div>
 
-  <%= link_to "Back", :back %>
-</div>
-</div>
+  <div class="field">
+    <i>(確認用)</i><br />
+    <%= f.password_field :current_password, autocomplete: "off",class: "form-control" %>
+  </div>
+
+
+    <div class="field">
+      <%= f.label :現在のパスワード %><br />
+      <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
+    </div>
+
+
+
+    <div class="actions">
+      <%= f.submit "更新", class: "btn btn-primary btn-block" %>
+    </div>
+  </div>
+  </div>
 <% end %>
+
+<h3>アカウントを削除する</h3>
+
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+<%= link_to "Back", :back %>
