--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,6 +5,7 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
+  <%= f.hidden_field :reset_password_token %>
 
   <div class="field">
     <%= f.email_field :email, autofocus: true,class: "form-control",placeholder:"メールアドレス" %>
@@ -37,12 +38,6 @@
   <div class="field">
     <%= f.password_field :password_confirmation, autocomplete: "off",class: "form-control",placeholder: "パスワード" %>
   </div>
-
-  <div class="field">
-    <i>(確認用)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off",class: "form-control" %>
-  </div>
-
 
     <div class="field">
       <%= f.label :現在のパスワード %><br />
