--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,7 +31,7 @@
     <%= f.password_field :password, autocomplete: "off", class: "form-control",placeholder: "パスワード" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> 文字以下にする</em>
+      <em>パスワードは<%= @minimum_password_length %> 文字以上必要です</em>
     <% end %>
   </div>
 
