--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,20 @@
+<h1>ユーザー一覧</h1>
 <div class="container">
-  
-  <h2>ユーザー</h2>
+  <div class="row">
 
   <% @users.each do |user| %>
+<h2><%= user.name %></h2>
+    <%= profile_img(user) %><br>
+    <%= user.email %><br>
+    <%= link_to 'ユーザー詳細', user_path(user) %>
+    <%= link_to 'メッセージ', conversations_path(sender_id: current_user.id, recipient_id: user.id), method: 'post'%>
+    <% if user.id != current_user.id %>
+    <%= render partial: 'follow_form', locals: { user: user } if signed_in? %>
 
-        <%= profile_img(user) %>
-        <%= user.email %>
-        <%= link_to 'ユーザー詳細', user_path(user) %>
-        <%= render 'follow_form', user: user %>
 
-  <% if user.id != current_user.id %>
 
-    <div class="item">
-      <%= link_to user.name, user %>
-      <%= link_to 'メッセージ', conversations_path(sender_id: current_user.id, recipient_id: user.id), method: 'post'%>
 
-    <%= render partial: 'follow_form', locals: { user: user } if signed_in?   %>
-
-  <% end %>
-
+<% end %>
 <% end %>
 </div>
 </div>
