--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,20 @@
 <div class="container">
-  <h2>フォロー</h2>
+  <h1>フォロー</h1>
         <% @user.followed_users.each do |user| %>
-        <%= profile_img(user) %>
-        <%= user.email %>
+        <h2><%= user.name %></h2>
+        <%= profile_img(user) %><br>
+        <%= user.email %><br>
         <%= render 'follow_form', user: user %>
       </div>
 <% end %>
 </div>
 
 <div class="container">
-  <h2>フォロワー</h2>
+  <h1>フォロワー</h1>
 <% @user.followers.each do |user| %>
-        <%= profile_img(user) %>
-        <%= user.email %>
+    <h2><%= user.name %></h2>
+        <%= profile_img(user) %><br>
+        <%= user.email %><br>
         <%= render 'follow_form', user: user %>
       </div>
 <% end %>
