--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -9,9 +9,16 @@
   }
 }
 input[type="submit"].btn-block{
-  margin: 15px 0;
+  margin: 30px 0;
 }
 
 .container{
-  padding-bottom: 85px;
+  padding-bottom: 60px;
+}
+.center {
+  margin: 0 auto;
+  width: 300px;
+  height: 170px;
+  background-image: image-url("topics.jpg");
+
 }
