--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -8,19 +8,22 @@
   <% @messages.each do |message| %>
     <% if message.body %>
       <% user = User.find(message.user_id) %>
+      <div class=row>
       <div class="item">
         <div class="content">
-          <div class="header"><strong><%= user.name %></strong> <%= message.message_time %></div>
+<div class="header"><strong><%= user.name %></strong> <%= message.message_time %></div>
           <div class="list">
             <div class="item">
               <i class="right triangle icon"></i>
               <%= message.body %>
+            </div>
             </div>
           </div>
         </div>
       </div>
     <% end %>
   <% end %>
+</div>
 </div>
 
 <%= form_for [@conversation, @message], html: {class: "ui reply form"} do |f| %>
