--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,18 +1,25 @@
+
+<div class="center"><img src="topics.jpg" /></div>
 <div class="container">
   <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+
 <p><%= notice %></p>
 
-<h1>Topics一覧</h1>
-<%= link_to "トピックを作成する", new_topic_path, class: 'btn btn-default' %>
+<%= link_to "ニュースをシェアしよう", new_topic_path, class: 'btn btn-default' %>
 <% @topics.each do |topic| %>
 <div class="row">
-<h3><%= topic.user.name %></h3>
+<h2><%= topic.user.name %></h2>
 
   <%= link_to topic_path(topic) do %>
- <p>トピック:<%= topic.content %></p>
+ <h3>Topic:</h3>
+ <%= topic.content %>
  <% end %>
+
+<% if topic.user.id == current_user.id %>
  <%= link_to "編集", edit_topic_path(topic.id), class: 'btn btn-default btn-sm btn-success' %>
  <%= link_to "削除", topic_path(topic.id), method: :delete, data: {confirm:"本当に削除しますか？"}, class: 'btn btn-default btn-sm btn btn-danger' %>
+
+<% end %>
 </div>
 <% end %>
 </div>
