ユーザー一覧をデザインした。（画像挿入）

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,10 @@
-
-<h1>友達一覧</h1>
+<div class="center"><img src="friends.jpg" /></div>
 
 <div class="container">
   <div class="row">
 
   <% @users.each do |user| %>
-<h2><%= user.name %></h2>
+<h1><%= user.name %></h1>
     <%= profile_img(user) %><br>
     <%= user.email %><br>
     <%= link_to 'ユーザー詳細', user_path(user) %>
