メッセージが空白で送られた時にメッセージ一覧にリダイレクトする様に修正。メッセージ一覧に戻るも追記

--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -19,6 +19,6 @@ input[type="submit"].btn-block{
   margin: 0 auto;
   width: 300px;
   height: 170px;
-  background-image: image-url("topics.jpg");
+  background-image: image-url("topics.png");
 
 }
