--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,4 +1,5 @@
-<div class="center"><img src="topics.jpg" /></div>
+<div class="center"><img src="topics.png" /></div>
+
 <div class="container">
   <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
 
