--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -15,10 +15,38 @@ input[type="submit"].btn-block{
 .container{
   padding-bottom: 60px;
 }
-.center {
+
+.page-top-btn {
+  display: block;
+  border-radius: 50px;
+  background: #336699;
+  width: 60px;
+  height: 60px;
+  transition: all 0.3s;
+  cursor: pointer;
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  z-index: 20;
+  a {
+    display: block;
+    color: white;
+    line-height: 60px;
+    text-decoration: none;
+    padding-left: 22px;
+  }
+  &:hover {
+  opacity: 0.7;
+  }
+}
+
+.topic_index_img {
   margin: 0 auto;
   width: 300px;
   height: 170px;
-  background-image: image-url("topics.png");
+  background-image: image-url("topic.jpeg");
+}
 
+.button-location {
+  padding-left: 5px;
 }
