--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -4,8 +4,9 @@
   <p class="flash"><%= notice %><%= alert %></p>
   <body>
   <section class="main-header">
-    
+
 </section>
-<h1>さあ、エンジニアになろう</h1>
+<h1>ニュースシェアサイト</h1>
+
 </body>
 </html>
