--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -13,7 +13,11 @@
   <% end %>
 
 <%= f.label :content %>
-<%= f.text_field :content, class: 'form-control' %>
+<%= f.text_field :content, class: 'form-control' %><br>
+
+<%= f.label :photo %>
+<%= f.file_field :photo %>
+<%= f.hidden_field :photo_cache %>
 <br>
 <%= f.submit '投稿', class: 'btn btn-primary btn-block' %>
 <% end %>
